[package]
name = "celeritasdb"
version = "0.1.0"
authors = [
    "drdr.xp <drdr.xp@gmail.com>",
    "sven <pengsven@gmail.com>",
    "lishulong <shulong.li.buaa@gmail.com>",
    "liubaohai <liubaohai0@gmail.com>",
    "liwenbo <wenbobuaa@foxmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
net2  = { version = "0.2.2", features = ["nightly"] }
parse = { path = "components/parse" }
redis = { version = "0.15.1"}
rand = "0.7"
tokio = { version = "0.2", features = ["rt-core", "macros"] }

[workspace]
members = [
  "components/parse",
  "components/hello",
  "components/epaxos",
  "components/protobuf-gen-rust",
  "components/cele_threads",
]
