[package]
name = "celeritasdb"
version = "0.1.0"
authors = [
    "drdr.xp <drdr.xp@gmail.com>",
    "sven <pengsven@gmail.com>",
    "lishulong <shulong.li.buaa@gmail.com>",
    "liubaohai <liubaohai0@gmail.com>",
    "liwenbo <wenbobuaa@foxmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
net2  = { version = "0.2.2", features = ["nightly"] }
parse = { path = "components/parse" }
redis = { version = "0.15.1"}
rand  = { version = "0.7" }
tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["full"] }
tonic = "0.1"
clap  = { version = "~2.33.0" } # command line argument parse
epaxos = { path = "components/epaxos" }

[dev-dependencies]
pretty_assertions = { version = "0.6.1" }

[workspace]
members = [
  "components/parse",
  "components/hello",
  "components/epaxos",
  "components/cele_threads",
]
exclude = [
    "components/protobuf-gen-rust",
    "pbbuild",
]
