[package]
name = "celeritasdb"
version = "0.1.0"
authors = [
    "drdr.xp <drdr.xp@gmail.com>",
    "sven <pengsven@gmail.com>",
    "lishulong <shulong.li.buaa@gmail.com>",
    "liubaohai <liubaohai0@gmail.com>",
    "liwenbo <wenbobuaa@foxmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cele"

[dependencies]
net2  = { version = "0.2.2", features = ["nightly"] }
parse = { path = "components/parse" }
redis = { version = "0.15.1"}
rand  = { version = "0.7" }
tokio = { version = "0.2.18", features = ["full"] }
tokio-util = { version = "0.6.4", features = ["full"] }
tonic = "0.2"
clap  = { version = "~2.33.0" } # command line argument parse
epaxos = { path = "components/epaxos" }
storage = { path = "components/storage" }
quick-error = { version = "1.2.2" }
futures = "0.3.0"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.3"
slog-global = { git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
slog-term = "2.4"
chrono = "0.4"

[dev-dependencies]
tempfile = { version = "3.1.0" }
pretty_assertions = { version = "0.6.1" }
backtrace = {version= "0.3.53"}

[workspace]
members = [
  "components/parse",
  "components/epaxos",
  "components/cele_threads",
  "components/storage",
]
