[package]
name = "cele_threads"
version = "0.1.0"
authors = ["Li, Shulong <shulong.li@baishancloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threads_pool = { version = "0.2.5" }
quick-error = { version = "2.0.0"}
