[package]
name = "epaxos"
version = "0.1.0"
authors = [
    "drdr.xp <drdr.xp@gmail.com>",
    "sven <pengsven@gmail.com>",
    "lishulong <shulong.li.buaa@gmail.com>",
    "liubaohai <liubaohai0@gmail.com>",
    "liwenbo <wenbobuaa@foxmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
net2 = "0.2"
pretty_assertions = { version = "0.6.1" }

[dependencies]
quick-error = { version = "1.2.2" }
rocksdb = { git = "https://github.com/tikv/rust-rocksdb.git", branch = "release-2.0" }
tempfile = { version = "3.1.0" }
prost = { version = "0.6.1" }
tonic = "0.2"
tokio = { version = "0.2", features = ["macros"] }
derive_more = "0.99.3"
num = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8" }

# derive FromStr for enum
enum-utils = "0.1.2"

[build-dependencies]
# this rev is master committed on 2020 Mar 20
# tonic-build = { git = "https://github.com/hyperium/tonic.git", branch = "master" }
tonic-build = { git = "https://github.com/hyperium/tonic.git", rev = "224280dfff8944e9e553337416d23d6e5a050945" }
