[package]
name = "epaxos"
version = "0.1.0"
authors = [
    "drdr.xp <drdr.xp@gmail.com>",
    "sven <pengsven@gmail.com>",
    "lishulong <shulong.li.buaa@gmail.com>",
    "liubaohai <liubaohai0@gmail.com>",
    "liwenbo <wenbobuaa@foxmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
net2 = "0.2"
pretty_assertions = { version = "0.6.1" }

[dependencies]
parse = { path = "../parse" }
quick-error = { version = "1.2.2" }
tempfile = { version = "3.1.0" }
prost = { version = "0.6.1" }
tonic = "0.2"
tokio = { version = "0.2.18", features = ["full"] }
derive_more = "0.99.3"
num = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8" }
lazy_static = { version = "1.4.0" }
storage = { path = "../storage" }
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-global = { git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }

# derive FromStr for enum
enum-utils = "0.1.2"

[build-dependencies]
tonic-build = { version = "0.2.0" }
