[package]
name = "storage"
version = "0.1.0"
authors = ["liubaohai <liubaohai0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { git = "https://github.com/tikv/rust-rocksdb.git", branch = "release-2.0" }
quick-error = { version = "1.2.2" }
tempfile = { version = "3.1.0" }
prost = { version = "0.6.1" }
